<resources>
    <string name="facebook_app_id">645507365565201</string>
    <string name="app_name">Korea Style</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">SETTINGS</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="username">User name</string>
    <string name="bestoftoday">BEST OF TODAY</string>
    <string name="bestofweek">Best of week</string>
    <string name="category">CATEGORY</string>
    <string name="setting">SETTING</string>
    <string name="menu_review">REVIEW</string>
    <string name="styler">STYLER</string>
    <string name="mystyle">MY STYLE</string>
    <string name="myshopping">MY SHOPPING</string>
    <string name="today">Today</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="code">Code:</string>
    <string name="price">Price:</string>
    <string name="sold">Sold:</string>
    <string name="discount">Discounts</string>
    <string name="likes">Likes</string>
    <string name="categories">CATEGORIES</string>
    <string name="dresses">DRESSES</string>
    <string name="tshirts">T-SHIRTS</string>
    <string name="shirts">SHIRTS</string>
    <string name="coatsandjackets">COATS &amp; JACKETS</string>
    <string name="shorts">SHORTS</string>
    <string name="pants">PANTS</string>
    <string name="skirts">SKIRTS</string>
    <string name="bags">BAGS</string>
    <string name="shoes">SHOES</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order date</string>
    <string name="ordertotal">Order total</string>
    <string name="purchasehistory">Purchase History</string>
    <string name="purchasesuccess">Purchase success</string>
    <string name="favoriteslist">FAVORITES LIST</string>
    <string name="buyinglist">BUYING LIST</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="darkred">Dark Red</string>
    <string name="brown">Brown</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="blue">Blue</string>
    <string name="darkblue">Dark blue</string>
    <string name="jean">Jean</string>
    <string name="violet">Violet</string>
    <string name="amount">Amount</string>
    <string name="editprofile">Edit profile</string>
    <string name="followlist">Follow list</string>
    <string name="changepassword">Change password</string>
    <string name="getnotification">Get Notification</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="versionofbuild">Version of build</string>
    <string name="information">Information</string>
    <string name="system">System</string>
    <string name="loginsignup">Log in/ Sign up</string>
    <string name="blank"></string>
    <string name="shippingaddress">Shipping address</string>
    <string name="material">Material:</string>
    <string name="cotton">Cotton</string>
    <string name="colorwithcolon">Color:</string>
    <string name="pricewithcolon">Price:</string>
    <string name="sizewithcolon">Size:</string>
    <string name="quantitywithcolon">Quantity:</string>
    <string name="howto">How to exchange/return/delivery ?</string>
    <string name="buyitnow">Buy It Now</string>
    <string name="addtofavoritelist">Add to favorite list</string>
    <string name="send">Send</string>
    <string name="comments">Comments</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State/Province/Region</string>
    <string name="phonenumber">Phone number</string>
    <string name="conti">Continue</string>
    <string name="orderconfirm">Order confirm</string>
    <string name="shipto">Ship to</string>
    <string name="namewithcolon">Name:</string>
    <string name="addresswithcolon">Address:</string>
    <string name="regionwithcolon">Region:</string>
    <string name="phonewithcolon">Phone:</string>
    <string name="orderdetail">Order detail</string>
    <string name="paymentanhshipping">Payments and shipping</string>
    <string name="paymentwithcolon">Payment:</string>
    <string name="shippingwithcolon">Shipping:</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="title_activity_service_test">ServiceTestActivity</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="nameblank">Your user name is blank</string>
    <string name="emailblank">Your email is blank</string>
    <string name="passblank">Your passwork is blank</string>
    <string name="confirmblank">Your passwork confirm is blank</string>
    <string name="emailnotexist">Your email is not exist</string>
    <string name="emailexist">Your email has existed</string>
    <string name="emailinvalid">Your email is invalid</string>
    <string name="passinvalid">Your password must have at least 4 characters</string>
    <string name="passwrong">Wrong password</string>
    <string name="connecterror">Connection error. Please try again</string>
    <string name="confirmpassworddifferent">Your password and confirm password are different</string>
    <string name="signupsuccessful">Sign up successful</string>
    <string name="loading">Please wait ...</string>
    <string name="signout">Logout</string>
    <string name="shippingwarn">You must fill all shipping infomations</string>
    <string name="confirmdeletebill">Do you want to delete this order?</string>
    <string name="ordersuccessful">Ordering successful</string>
    <string name="cancel">Cancel</string>
    <string name="commentblank">Your comment is blank</string>
    <string name="district">District</string>
    <string name="writecontenthere">Write content here...</string>
    <string name="createnewpost">Create New Style</string>
    <string name="postcreated">Post created successfully.</string>
    <string name="yourname">Your name</string>
    <string name="edit">Edit</string>
    <string name="enteryourname">Enter your name...</string>
    <string name="yourprofile">Your profile</string>
    <string name="enteryourprofile">Enter your profile...</string>
    <string name="profilesaved">Your profile saved successfully</string>
    <string name="purchaseunconfirmed">Purchase unconfirmed</string>
    <string name="purchaseproccessing">Purchase processing</string>
    <string name="purchasecanceled">Purchase canceled</string>
    <string name="cancelorder">Cancel order</string>
    <string name="currentpassword">Current password</string>
    <string name="newpassword">New password</string>
    <string name="changepasssuccess">Password changed successfully</string>
    <string name="orderhaveconformed">The order which have conformed can not cancel</string>
    <string name="areyousure">Are you sure?</string>
    <string name="choosecrop">Choose application to crop</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="your_version">Current version </string>
    <string name="you_want_install">. Do you want update to vesion </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_request">Your device currently do not have any internet connections.
												\nWould you like to enable internet now?</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="do_you_want_to_exit_">Do you want to exit?</string>
    <string name="invalidimage">Invalid image</string>
    <string name="cropimage">Crop image</string>
    <string name="newstyler">Post your style</string>
    <string name="takeimage">Take image from</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="mypage">My page</string>
    <string name="addtocart">Add to cart</string>
    <string name="purchase">Purchase</string>
    <string name="mycart">MY SHOPPING CART</string>
    <string name="clearcart">Clean Cart</string>
    <string name="emptycart">Your cart is empty</string>
    <string name="autoupdate">Processing, please wait ...</string>
    <string name="firsttime">Loading for first time start ...</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_loading">Loading</string>
    <string name="process">Processing ...</string>
    <string name="processwait">Processing, please wait ...</string>
    <string name="followingstyle">FOLLOWING STYLE</string>
    <string name="allstyle">ALL STYLE</string>
    <string name="addfollow">+Follow</string>
    <string name="followed">Followed</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="Unfollow">Unfollow</string>
    <string name="selectlanguage">Select your language</string>
    <string name="vietnam">Vietnamese</string>
    <string name="korean">Korean</string>
    <string name="register">Register new account</string>
    <string name="addsuccess">Add to cart successfully</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="orderdate">Order date</string>
    <string name="orderstatus">Order status</string>
    <string name="uncofirm">Uncofirm</string>
    <string name="cofirmed">Cofirmed</string>
    <string name="homepage">Home page</string>
    <string name="pleasefillabovefields">Please fill above fields</string>
    <string name="pleaseenteradifferentpassword">Please enter a different password</string>
    <string name="passwordconfirmdoesnotmatch">Password confirm does not match</string>
    <string name="passwordlengthgreaterthanfour">Password length must be greater than 4 characters</string>
    <string name="viewmore">View more</string>
    <string name="incorrectpassword">Incorrect password</string>
    <string name="post">Post</string>
    <string name="unlikepost">Do you want to unlike this post?</string>
    <string name="deletepost">Do you want to delete this post?</string>
    <string name="exitwarn">Do you want to exit?</string>
    <string name="forgotpassword">Forgot password ?</string>
    <string name="getnotifications">Get notifications</string>
    <string name="friendnewpost">New following post</string>
    <string name="newmystylecomment">New comments in my style</string>
    <string name="replymycomments">Reply my comments</string>
    <string name="someoneaddedme">Someone follow</string>
    <string name="enablesound">Enable sound</string>
    <string name="checkout">Checkout</string>
    <string name="fullname">Full Name</string>
    <string name="contactinformation">Contact Information</string>
    <string name="what_s_inyourmind">What\'s in your mind?</string>
    <string name="lang_auto">Auto</string>
    <string name="lang_korea">한국어</string>
    <string name="lang_english">English</string>
    <string name="lang_vietnam">Tiếng Việt</string>
</resources>