<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/login_edtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/icon_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/login_edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edtLoginEmail"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_pass"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/icon_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/login_btnLoginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edtLoginPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/com_facebook_button_blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_btnLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btnLoginSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgotpassword"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/login_btnLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btnLoginForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/white" />

</RelativeLayout>