<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/setting_img01"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/stlang_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lang_auto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <RadioButton
            android:id="@+id/stlang_korea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lang_korea" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <RadioButton
            android:id="@+id/stlang_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lang_english" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <RadioButton
            android:id="@+id/stlang_vi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lang_vietnam" />
    </RadioGroup>

</ScrollView>