<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_changepass_edtOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield_default_holo_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="32" />

    <EditText
        android:id="@+id/dialog_changepass_edtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield_default_holo_light"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:maxLength="32" />

    <EditText
        android:id="@+id/dialog_changepass_edtConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield_default_holo_light"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:maxLength="32" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_updateshipping_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_dialog"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/dialog_updateshipping_btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_dialog"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>