<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/setting_img01"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/stnoti_cbEnable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/getnotifications" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5" />

            <CheckBox
                android:id="@+id/stnoti_cbFriendPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/friendnewpost" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5" />

            <CheckBox
                android:id="@+id/stnoti_cbMystyleComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/newmystylecomment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5" />

            <CheckBox
                android:id="@+id/stnoti_cbReplyComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/replymycomments" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5" />

            <CheckBox
                android:id="@+id/stnoti_cbFriendAddMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/someoneaddedme" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/setting_img01"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/stnoti_cbEnableSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/checkbox"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/enablesound" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>