<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/statusdialog_edtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/textfield_default_holo_light"
        android:gravity="start|top"
        android:hint="@string/what_s_inyourmind"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="3"
        android:maxLines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/statusdialog_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_dialog"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/statusdialog_btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_dialog"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>